--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -1,10 +1,34 @@
 .Post {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center; 
     border: 1px solid black;
-    
-    padding: 5px;
+
     margin: 5px;
+}
+
+.Post-date {
+    text-align: right;
+}
+
+.Post-uri {
+    text-align: right;
+
+    margin-bottom: 10px;
+}
+
+.Post-image {
+    float: right;
+
+    max-width: 60%;
+    height: auto;
+
+    margin: 10px;
+}
+
+.Post-content{
+    font-size: 22px;
+    line-height: 28px;
+    letter-spacing: -1px;
+    word-spacing: 1px;
+    text-indent: 10px;
+
+    padding: 10px;
 }
